--- a/iOS examples/ch08_EXAMPLES/OpenGLES_Ch8_4/OpenGLES_Ch8_4/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/iOS examples/ch08_EXAMPLES/OpenGLES_Ch8_4/OpenGLES_Ch8_4/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,10 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.0" toolsVersion="1934" systemVersion="10K549" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="12B19" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
     <dependencies>
-        <development defaultVersion="4200" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="931"/>
+        <deployment defaultVersion="1296" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
     </dependencies>
     <scenes>
+        <!--OpenGLES Ch84 View Controller-->
         <scene sceneID="5">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
@@ -20,7 +21,7 @@
                                     <action selector="takeShouldRenderSpherical:" destination="2" eventType="valueChanged" id="wTi-we-xuA"/>
                                 </connections>
                             </switch>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Render Shperical:" textAlignment="right" lineBreakMode="tailTruncation" minimumFontSize="10" id="GMi-gV-swO">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Render Spherical:" textAlignment="right" lineBreakMode="tailTruncation" minimumFontSize="10" id="GMi-gV-swO">
                                 <rect key="frame" x="76" y="23" width="137" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
