--- a/iOS examples/ch03_EXAMPLES/OpenGLES_Ch3_3/OpenGLES_Ch3_3/en.lproj/MainStoryboard_iPad.storyboard
+++ b/iOS examples/ch03_EXAMPLES/OpenGLES_Ch3_3/OpenGLES_Ch3_3/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,13 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.0" toolsVersion="1910" systemVersion="10K549" targetRuntime="iOS.CocoaTouch.iPad" nextObjectID="22" propertyAccessControl="none" initialViewController="2">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2840" systemVersion="12C54" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
     <dependencies>
-        <development defaultVersion="4200" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="911"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1926"/>
     </dependencies>
     <scenes>
+        <!--OpenGLES Ch33 View Controller-->
         <scene sceneID="4">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
                 <viewController id="2" customClass="OpenGLES_Ch3_3ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5" customClass="GLKView">
                         <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
@@ -30,7 +29,7 @@
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Animation" lineBreakMode="tailTruncation" minimumFontSize="10" id="13">
                                 <rect key="frame" x="354" y="895" width="118" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" size="system"/>
                                 <color key="textColor" red="0.76630434780000001" green="0.76630434780000001" blue="0.76630434780000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="highlightedColor" red="0.74456521740000003" green="0.74456521740000003" blue="0.74456521740000003" alpha="0.75" colorSpace="calibratedRGB"/>
@@ -39,7 +38,7 @@
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Repeat Texture" lineBreakMode="tailTruncation" minimumFontSize="10" id="14">
                                 <rect key="frame" x="354" y="960" width="118" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" size="system"/>
                                 <color key="textColor" red="0.76630434780000001" green="0.76630434780000001" blue="0.76630434780000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="highlightedColor" red="0.74456521740000003" green="0.74456521740000003" blue="0.74456521740000003" alpha="0.75" colorSpace="calibratedRGB"/>
@@ -55,7 +54,7 @@
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Linear Filter" lineBreakMode="tailTruncation" minimumFontSize="10" id="19">
                                 <rect key="frame" x="354" y="23" width="118" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" size="system"/>
                                 <color key="textColor" red="0.76630434780000001" green="0.76630434780000001" blue="0.76630434780000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="highlightedColor" red="0.74456521740000003" green="0.74456521740000003" blue="0.74456521740000003" alpha="0.75" colorSpace="calibratedRGB"/>
@@ -72,22 +71,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
     <classes>
-        <class className="GLKView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/GLKView.h"/>
-            <relationships>
-                <relationship kind="outlet" name="delegate"/>
-            </relationships>
-        </class>
-        <class className="GLKViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/GLKViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="delegate"/>
-            </relationships>
-        </class>
         <class className="OpenGLES_Ch3_3ViewController" superclassName="GLKViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/OpenGLES_Ch3_3ViewController.h"/>
             <relationships>
